fixes varios