@@ -12,12 +12,12 @@ public class Pago {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @ManyToOne(fetch = FetchType.LAZY)
+    @ManyToOne(fetch = FetchType.LAZY, optional = false)
     @JoinColumn(name = "factura_id", nullable = false)
     private Factura factura;
 
     @Column(name = "metodo", length = 20, nullable = false)
-    private String metodo;
+    private String metodo; // EFECTIVO | TARJETA | TRANSFERENCIA | CHEQUE
 
     @Column(name = "monto", precision = 12, scale = 2, nullable = false)
     private BigDecimal monto;
@@ -28,120 +28,64 @@ public class Pago {
     @Column(name = "created_at", nullable = false)
     private LocalDateTime createdAt;
 
-    // Constructor vacío (requerido por JPA)
+    // --- ctors ---
     public Pago() {}
 
-    // Constructor con campos obligatorios
     public Pago(Factura factura, String metodo, BigDecimal monto) {
-        this.factura = factura;
-        this.metodo = metodo;
-        this.monto = monto;
-        this.fechaPago = LocalDateTime.now();
-        this.createdAt = LocalDateTime.now();
+        this(factura, metodo, monto, LocalDateTime.now());
     }
 
-    // Constructor completo
     public Pago(Factura factura, String metodo, BigDecimal monto, LocalDateTime fechaPago) {
         this.factura = factura;
-        this.metodo = metodo;
+        // yo normalizo a UPPER para consistencia
+        this.metodo = metodo != null ? metodo.trim().toUpperCase() : null;
         this.monto = monto;
-        this.fechaPago = fechaPago != null ? fechaPago : LocalDateTime.now();
+        this.fechaPago = (fechaPago != null) ? fechaPago : LocalDateTime.now();
         this.createdAt = LocalDateTime.now();
     }
 
-    // Getters y Setters
-    public Long getId() {
-        return id;
-    }
+    // --- getters/setters ---
+    public Long getId() { return id; }
+    public void setId(Long id) { this.id = id; }
 
-    public void setId(Long id) {
-        this.id = id;
-    }
+    public Factura getFactura() { return factura; }
+    public void setFactura(Factura factura) { this.factura = factura; }
 
-    public Factura getFactura() {
-        return factura;
-    }
+    public String getMetodo() { return metodo; }
+    public void setMetodo(String metodo) { this.metodo = metodo != null ? metodo.trim().toUpperCase() : null; }
 
-    public void setFactura(Factura factura) {
-        this.factura = factura;
-    }
+    public BigDecimal getMonto() { return monto; }
+    public void setMonto(BigDecimal monto) { this.monto = monto; }
 
-    public String getMetodo() {
-        return metodo;
-    }
+    public LocalDateTime getFechaPago() { return fechaPago; }
+    public void setFechaPago(LocalDateTime fechaPago) { this.fechaPago = fechaPago; }
 
-    public void setMetodo(String metodo) {
-        this.metodo = metodo;
-    }
+    public LocalDateTime getCreatedAt() { return createdAt; }
+    public void setCreatedAt(LocalDateTime createdAt) { this.createdAt = createdAt; }
 
-    public BigDecimal getMonto() {
-        return monto;
-    }
-
-    public void setMonto(BigDecimal monto) {
-        this.monto = monto;
-    }
-
-    public LocalDateTime getFechaPago() {
-        return fechaPago;
-    }
-
-    public void setFechaPago(LocalDateTime fechaPago) {
-        this.fechaPago = fechaPago;
-    }
-
-    public LocalDateTime getCreatedAt() {
-        return createdAt;
-    }
-
-    public void setCreatedAt(LocalDateTime createdAt) {
-        this.createdAt = createdAt;
-    }
-
-    // Métodos de callback JPA
+    // --- callbacks ---
     @PrePersist
     public void prePersist() {
-        if (this.fechaPago == null) {
-            this.fechaPago = LocalDateTime.now();
-        }
-        this.createdAt = LocalDateTime.now();
+        if (this.metodo != null) this.metodo = this.metodo.trim().toUpperCase();
+        if (this.fechaPago == null) this.fechaPago = LocalDateTime.now();
+        if (this.createdAt == null) this.createdAt = LocalDateTime.now();
+        if (this.monto == null) this.monto = BigDecimal.ZERO; // defensivo; tu servicio valida > 0
     }
 
-    // Validaciones
+    // --- validaciones utilitarias ---
     public boolean isValid() {
-        return monto != null && monto.compareTo(BigDecimal.ZERO) > 0 &&
-                metodo != null && !metodo.trim().isEmpty() &&
-                factura != null;
+        return factura != null &&
+                metodo != null && !metodo.isBlank() &&
+                monto != null && monto.compareTo(BigDecimal.ZERO) > 0;
     }
 
-    // Métodos de utilidad
-    public boolean isMetodoEfectivo() {
-        return "EFECTIVO".equalsIgnoreCase(this.metodo);
-    }
+    public boolean isMetodoEfectivo()       { return "EFECTIVO".equalsIgnoreCase(this.metodo); }
+    public boolean isMetodoTarjeta()        { return "TARJETA".equalsIgnoreCase(this.metodo); }
+    public boolean isMetodoTransferencia()  { return "TRANSFERENCIA".equalsIgnoreCase(this.metodo); }
+    public boolean isMetodoCheque()         { return "CHEQUE".equalsIgnoreCase(this.metodo); }
 
-    public boolean isMetodoTarjeta() {
-        return "TARJETA".equalsIgnoreCase(this.metodo);
-    }
-
-    public boolean isMetodoTransferencia() {
-        return "TRANSFERENCIA".equalsIgnoreCase(this.metodo);
-    }
-
-    // Enum para métodos de pago (opcional - puedes usarlo como constantes)
+    // Opcional: catálogo de métodos
     public enum MetodoPago {
-        EFECTIVO("EFECTIVO"),
-        TARJETA("TARJETA"),
-        TRANSFERENCIA("TRANSFERENCIA"),
-        CHEQUE("CHEQUE");
-
-        private final String valor;
-
-        MetodoPago(String valor) {
-            this.valor = valor;
-        }
-
-        public String getValor() {
-            return valor;
-        }
+        EFECTIVO, TARJETA, TRANSFERENCIA, CHEQUE
     }
 }
